modules/seed/templates/addons/guestbook/manifests/frontend-deployment.yml
apiVersion: apps/v1beta2
kind: Deployment
metadata:
  name: frontend
  namespace: guestbook
  labels:
   app: guestbook
   tier: frontend

spec:
  replicas: 1
  selector:
    matchLabels:
      app: guestbook
      tier: frontend
  template:
    metadata:
      labels:
        app: guestbook
        tier: frontend
    spec:
      containers:
      - name: php-redis
        image: gcr.io/google-samples/gb-frontend:v4
        resources:
          requests:
            cpu: 100m
            memory: 100Mi
        ports:
        - containerPort: 80
