modules/seed/templates/addons/guestbook/manifests/redis-slave-deployment.yml
apiVersion: apps/v1beta2
kind: StatefulSet
metadata:
  name: redis-slave
  namespace: guestbook
  # these labels can be applied automatically
  # from the labels in the pod template if not set
  labels:
    app: redis
    role: slave
    tier: backend
spec:
  # this replicas value is default
  # modify it according to your case
  replicas: 1
  # selector can be applied automatically
  # from the labels in the pod template if not set
  selector:
    matchLabels:
      app: redis
      role: slave
      tier: backend
  serviceName: redis-slave
  template:
    metadata:
      labels:
        app: redis
        role: slave
        tier: backend
    spec:
      containers:
      - name: slave
        image: gcr.io/google_samples/gb-redisslave:v1
        resources:
          requests:
            cpu: 100m
            memory: 100Mi
        ports:
        - containerPort: 6379
        volumeMounts:
        - name: redis-storage
          mountPath: /data
  volumeClaimTemplates:
  - metadata:
      name: redis-storage
    spec:
      accessModes:
      - ReadWriteOnce
#      storageClassName: 
      resources:
        requests:
          storage: 1G
