modules/seed/templates/addons/guestbook/manifests/redis-master-service.yml
apiVersion: v1
kind: Service
metadata:
  name: redis-master
  namespace: guestbook
  labels:
    app: redis
    role: master
    tier: backend
spec:
  ports:
    # the port that this service should serve on
  - port: 6379
    targetPort: 6379
  selector:
    app: redis
    role: master
    tier: backend
