modules/seed/templates/addons/guestbook/manifests/redis-slave-service.yml
apiVersion: v1
kind: Service
metadata:
  name: redis-slave
  namespace: guestbook
  labels:
    app: redis
    role: slave
    tier: backend
spec:
  ports:
    # the port that this service should serve on
  - port: 6379
  selector:
    app: redis
    role: slave
    tier: backend
